second draft of muzzle landing page project

--- a/index.html
+++ b/index.html
@@ -8,28 +8,53 @@
     <title>Muzzle Landing Page</title>
 </head>
 <body>
-<section>
+<header>
     <img id="logo" src="images/muzzle_logo.png" alt="Muzzle logo">
     <h1>muzzle</h1>
-    <p class="top">A simple APP to quiet annoying notifications</p>
-<div class="container">
-<button class="download" src="images/cloud.png" alt="cloud">DOWNLOAD</button>
-</div>
+    <p class="top">A simple APP to quiet annoying notifications<br> while screensharing</p>
+</header>
+<section>
 
-<h4>Automatically turn on "Do Not Disturb" mode when screensharing is enabled.</h4>
-<a href="">Release notes</a>
-<a href="">help</a>
+<button class="download">DOWNLOAD</button>
+<h4>Automatically turn on "Do Not Disturb" mode when screensharing <br>is enabled.</h4>
+<nav>
+<ul class="horizontal">
+    <li>
+        <img id="logos" src="images/zoom.png" alt="zoom">
+        <span>zoom</span>
+    </li>
+    <li>
+        <img id="logos" src="images/bluejeans.png" alt="bluejeans logo">
+        <span>blue<br>jeans</span>
+    </li>
+    <li>
+        <img id="logos" src="images/hangouts.png" alt="google hangouts logo">
+        <span>google<br>hangouts</span>
+    </li>
+    <li>
+        <img id="logos" src="images/slack.png" alt="slack logo">
+        <span>slack</span>
+    </li>
+    <li>
+        <img id="logos" src="images/join-me.png" alt="join me logo">
+        <span>join<br>me</span>
+    </li>
+</ul>
+</nav>
+<a class="links" id="release" href="">Release notes</a>
+<a class="links" id="help" href="">help</a>
 </section>
+
 <footer>
     <div class="quotes">
-    <div class="num1">
+    <div id="num1">
     <strong>Build Websites?</strong>
     <br>
     <em>You'll love my other APP. It's roughly 
         <br>
     183x better then macOS catalina:</em>
 </div>
-<div class="num2">
+<div id="num2">
     <strong>Don't Build Websites?</strong>
     <br>
     <em>It's a good thing I know a guy.
@@ -39,12 +64,14 @@
 </div>
 </div>
 </footer>
+<aside>
 <div class="notifications">
-    <img id="insta" src="/images/insta_noti.jpg" alt="instagram notification">
-    <img id="messa"  src="images/mess_noti.webp" alt="messanger notification">
-    <img id="push" src="images/push_noti.png" alt="push notification">
-    <img id="remind" src="images/remind_noti.webp" alt="reminder notification">
+    <img id="messa"  src="images/mess_noti.png" alt="messanger notification">
+    <img id="push" src="images/reminder.png" alt="reminder notification">
+    <img id="remind" src="images/whats_app.png" alt="whats app notification">
     <img id="snap" src="images/snap_noti.png" alt="snapchat notification">
+</aside>
+
 </div>
 </body>
 </html>
