finished muzzle landing page project

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <button class="download">DOWNLOAD</button>
 <h4>Automatically turn on "Do Not Disturb" mode when screensharing <br>is enabled.</h4>
 <nav>
+    <div class="">
 <ul class="horizontal">
     <li>
         <img id="logos" src="images/zoom.png" alt="zoom">
@@ -66,12 +67,14 @@
 </footer>
 <aside>
 <div class="notifications">
-    <img id="messa"  src="images/mess_noti.png" alt="messanger notification">
-    <img id="push" src="images/reminder.png" alt="reminder notification">
-    <img id="remind" src="images/whats_app.png" alt="whats app notification">
-    <img id="snap" src="images/snap_noti.png" alt="snapchat notification">
+    <div class="messa">
+        <img id="not1" src="images/whatsppanoti.png" alt="notification">
+        <img id="not2" src="images/whatsppanoti.png" alt="notification">
+        <img id="not3" src="images/whatsppanoti.png" alt="notification">
+        <img id="not4" src="images/whatsppanoti.png" alt="notification">
+</div>
+</div>
 </aside>
 
-</div>
 </body>
 </html>
