updated final copy

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 <aside>
 <div class="notifications">
     <div class="messa">
-        <img id="not1" src="images/whatsppanoti.png" alt="notification">
-        <img id="not2" src="images/whatsppanoti.png" alt="notification">
-        <img id="not3" src="images/whatsppanoti.png" alt="notification">
-        <img id="not4" src="images/whatsppanoti.png" alt="notification">
+        <img id="not1" src="images/whatsppanoti.png" alt="notification bubble">
+        <img id="not2" src="images/whatsppanoti.png" alt="notification bubble">
+        <img id="not3" src="images/whatsppanoti.png" alt="notification bubble">
+        <img id="not4" src="images/whatsppanoti.png" alt="notification bubble">
 </div>
 </div>
 </aside>
